# CodeGuardian

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT-GRAPH.md  CURRENT-PHASE.md  INSTALL.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  TESTING.md  THREAT-MODEL.md  TROUBLESHOOTING.md  action.yml  memory.jsonl  pyproject.toml
.codeguardian/: policy.yml
.github/: dependabot.yml
bench/: README.md  run_bench.py
doc/: CodeGuardian-AI-Blueprint.md  GA-CHECKLIST.md  GitHub-PR-User-Flowmap.md  IMPROVEMENT-PLAN.md  INSTALL.md  POST-V1-ROADMAP.md  Phase-Wise-Build-Plan.md  RELEASING.md  TESTING.md  THREAT-MODEL.md  TROUBLESHOOTING.md  Workflow-Improvements.md  ZERO-TOUCH-PLAN.md
e2e/: README.md  __init__.py  validate_sandbox.py
examples/: README.md  monorepo.yml  private-repo-with-groq.yml  public-repo.yml  required-check.yml
scripts/: run-local.sh
tests/: injection_corpus.py  test_analyzers.py  test_classify.py  test_improvement_plan.py  test_model_key_required.py  test_phase10_batched_diff.py  test_phase10_large_diff.py  test_phase10_memory_compaction.py  test_phase10_shared_graph.py  test_phase10_walk.py  test_phase11_packaging.py  test_phase12_ask_mode.py  test_phase12_beta_infrastructure.py  test_phase12_language_agnostic.py  test_phase12_python_support.py  test_phase2_analyzers.py  test_phase2_graph.py  test_phase3_commands.py  test_phase4_analyzers.py  test_phase4_policy.py  test_phase5_memory.py  test_phase7_action_metadata.py  test_phase7_e2e_validator.py  test_phase7_github_client.py  test_phase7_live_api.py  test_phase7_slash_trigger.py  test_scoring.py  (+5 more)
(+49 files in other folders)
